# Project_coursework_4_1

./: .env.example  .flake8  .gitignore  README.md  manage.py  pyproject.toml
config/: settings.py  urls.py
mailing/: admin.py  admin_actions.py  forms.py  models.py  urls.py  views.py  views_index.py  views_statistics.py
mailing/management/commands/: create_managers_group.py  send_mailing.py
mailing/migrations/: 0001_initial.py  0002_alter_client_options_alter_mailing_options_and_more.py
mailing/templates/: base.html
mailing/templates/mailing/: confirm_delete.html  form.html  index.html  list.html  mailing_report.html  statistics.html
mailing/templates/users/: profile.html  register.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: init_managers.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar_alter_user_country_and_more.py  0003_user_email_confirmed.py
